--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,7 @@
+body{
+    background-color: #FAFAFA;
+}
+
 .btn-primary {
     background-color: #00838f;
     margin-top: 10px;
@@ -18,6 +22,15 @@
 .buttons-section {
     display: flex;
     justify-content: center;
+}
+
+.card{
+    border:none;
+    transition: background-color 0.5s ease-in-out;
+}
+.card:hover{
+    cursor: pointer;
+    background-color: #f5f5f5;
 }
 
 .card-body {
