Added training details modal and repaired slideshow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -91,3 +91,7 @@ form {
     background-color: #f0f7f4;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 4px 20px 0 rgba(0, 0, 0, 0.19);
 }
+
+.modal-span{
+    font-weight: bold;
+}
