added manage submitted trainings page for admin

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -13,6 +13,10 @@ body{
     color: #00838f;
 }
 
+.btn-primary.clicked {
+    background-color: #8f2100;
+}
+
 .btn-secondary {
     background-color: #8f2100;
     margin-top: 10px;
